src/app/(site)/globals.css
@import 'tailwindcss';

:root {
	--primary: #2563eb;
	--secondary: #f8fafc;
	--tertiary: #1e293b;
	--accent-1: #cbd5e1;
	--accent-focus: #ff6e1f;
}

@theme inline {
	--color-primary: var(--primary);
	--color-secondary: var(--secondary);
	--color-tertiary: var(--tertiary);
	--color-accent-1: var(--accent-1);
	--color-accent-focus: var(--accent-focus);
	--color-text-dark: var(--primary);
	--color-text-light: var(--secondary);

	--font-primary: var(--font-primary);
	--font-secondary: var(--font-work-sans);

	--text-display-large: 100px;
	--text-display-medium: 70px;
	--text-display-small: 40px;
	--text-headline-large: 40px;
	--text-headline-medium: 34px;
	--text-headline-small: 28px;
	--text-title-large: 32px;
	--text-title-medium: 28px;
	--text-title-small: 24px;
	--text-subtitle-large: 32px;
	--text-subtitle-medium: 26px;
	--text-subtitle-small: 20px;
	--text-navlink-medium: 20px;
	--text-tag-medium: 16px;
	--text-subline-medium: 24px;
	--text-subline-small: 20px;
	--text-body-large: 20px;
	--text-body-medium: 18px;
	--text-body-small: 18px;
	--text-label-large: 16px;
	--text-label-medium: 14px;
	--text-label-small: 12px;

	--max-width-desktop: 1500px;
	--max-width-text: 759px;
	--width-desktop: var(--max-width-desktop);

	--breakpoint-3xl: 120rem;

	/* Heights based on Tailwind's spacing scale: --spacing: 0.25rem /* 4px */
	--height-header-desktop: calc(var(--spacing) * 51) /* [51] 12.75rem = 204px */;
	--height-header-tablet: calc(var(--spacing) * 48) /* [48] 12rem = 192px */;
	--height-header-mobile: calc(var(--spacing) * 38) /* [38] 9.5rem = 152px */;
	--height-content: calc(100svh - var(--height-header-desktop));
}

@layer base {
	*,
	*::before,
	*::after {
		box-sizing: border-box;
	}

	* {
		margin: 0;
		padding: 0;
	}

	/* SCROLLBAR STYLES */
	* {
		scrollbar-width: thin;
		scrollbar-color: var(--primary) var(--secondary);
	}

	/* Chrome, Edge, and Safari */
	*::-webkit-scrollbar {
		width: 12px;
	}

	*::-webkit-scrollbar-track {
		background: var(--secondary);
	}

	*::-webkit-scrollbar-thumb {
		background-color: var(--secondary);
	}

	button {
		@apply cursor-pointer;
	}

	/* FOCUS STYLES */
	/* :focus-visible {
		@apply outline-none ring-2 ring-accent-focus ring-offset-2;
	} */

	/* LINK STYLES */
	.underlined-link {
		@apply relative inline-block w-fit cursor-pointer overflow-x-clip text-inherit no-underline;
	}

	.underlined-link::after {
		@apply absolute bottom-0.5 left-0 z-50 h-0.5 w-full -translate-x-[102%] bg-current transition-transform duration-300 content-[''];
	}

	.underlined-link:hover::after,
	.active.underlined-link::after {
		@apply translate-x-0;
	}

	/* BUTTON STYLES */

	button {
		@apply cursor-pointer;
	}

	.btn {
		@apply rounded-3xl px-4 py-3 text-xl font-medium tracking-tighter leading-none transition-colors duration-300 flex items-center justify-center gap-2 disabled:opacity-50;
	}

	.btn-primary {
		@apply bg-primary text-secondary hover:bg-accent-1;
	}

	.btn-secondary {
		@apply bg-secondary text-primary hover:bg-accent-1;
	}

	.btn-accent-1 {
		@apply bg-accent-1 text-secondary hover:bg-accent-1;
	}

	.btn-ghost-secondary {
		@apply border border-secondary bg-transparent text-secondary hover:bg-tertiary w-fit;
	}

	.btn-ghost-tertiary {
		@apply border border-tertiary bg-transparent text-tertiary hover:bg-tertiary hover:text-secondary w-fit;
	}

	/* PILL STYLES */
	.pill {
		@apply rounded-full px-4 py-2 leading-none font-normal text-lg bg-accent-1 w-fit;
	}

	/* HEADING STYLES */
	.heading-display {
		@apply font-primary text-display-small font-thin sm:text-display-medium md:text-display-large leading-none max-w-text;
	}

	.heading-headline {
		@apply font-primary text-headline-small leading-[0.9] tracking-tight font-thin sm:text-headline-medium xl:text-headline-large max-w-text;
	}

	.heading-title {
		@apply font-primary text-title-small font-normal sm:text-title-medium xl:text-title-large text-pretty tracking-tight leading-[0.96] md:leading-[0.9] max-w-text;
	}

	.heading-subtitle {
		@apply text-subtitle-small sm:text-subline-medium lg:text-subtitle-large font-medium text-pretty tracking-tight leading-[1.05] max-w-text;
	}

	/* TEXT STYLES */
	.text-body {
		@apply text-body-small md:text-body-medium lg:text-body-large font-light;
	}

	.text-paragraph {
		@apply text-body-medium text-pretty max-w-text;
	}

	.text-subline {
		@apply text-subline-small lg:text-subline-medium leading-[1.1] tracking-tight font-normal max-w-text;
	}

	.text-tag {
		@apply text-tag-medium leading-[0.9] uppercase tracking-tighter;
	}

	.text-label {
		@apply text-label-small md:text-label-medium lg:text-label-large leading-5;
	}

	/* NAVLINK STYLES */
	.text-navlink {
		@apply text-navlink-medium leading-6 tracking-tight font-medium;
	}

	/* RICH TEXT STYLES */
	.custom-rich-text p {
		@apply text-body-medium mb-6 lg:mb-12 font-normal max-w-text;
	}

	.custom-rich-text p:last-of-type {
		@apply mb-0;
	}

	.custom-rich-text h2,
	.custom-rich-text h3,
	.custom-rich-text h4,
	.custom-rich-text h5,
	.custom-rich-text h6 {
		@apply text-body-medium font-normal mt-6 lg:mt-12 mb-2 leading-[1.1] max-w-text;
	}

	.custom-rich-text a {
		@apply font-normal;
	}

	.custom-rich-text ul {
		@apply list-disc ml-6 mb-6 lg:mb-12 text-body-medium font-normal;
	}

	/* ANIMATIONS */

	@keyframes fadeIn {
		from {
			opacity: 0;
			transform: translateY(50%);
		}
		to {
			opacity: 1;
			transform: translateY(0);
		}
	}

	.form-input {
		@apply px-3 py-2 border border-secondary rounded-lg disabled:opacity-50 disabled:cursor-not-allowed;
	}

	/* UTILITIES */
	.custom-container {
		@apply w-full mx-auto max-w-desktop;
	}

	.gutter-stable {
		@media (min-width: 1428px) {
			scrollbar-gutter: stable;
		}
	}

	.gutter-auto {
		scrollbar-gutter: auto;
	}

	.spinner {
		@apply w-4 h-4 border-2 border-secondary border-t-transparent rounded-full animate-spin;
	}

	.header-line {
		@apply absolute h-0.5 bg-secondary top-[77px] sm:top-[108px] md:top-[134px];
	}
}

